# lix-diff

./: .gitignore  Cargo.toml  README.md  flake.nix  package.nix  shell.nix
.github/workflows/: tangled.yml
src/: color.rs  diff.rs  main.rs  package.rs  parser.rs  versioning.rs
