[package]
name = "lix-diff"
version = "1.0.1"
license = "MIT"
description = "A lix plugin for diffing two generations"
homepage = "https://github.com/isabelroses/lix-diff"
authors = ["Isabel Roses <isabel@isabelroses.com>"]
edition = "2024"

[dependencies]
argh = "0.1.13"
color-eyre = "0.6.4"
humansize = "2.1.3"
nu-ansi-term = "0.50.1"
serde = "1.0.219"
serde_json = "1.0.140"

[lints.clippy]
all = "warn"
pedantic = "warn"
unreadable_literal = { level = "allow", priority = 1 }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

