[package]
name = "lix-diff"
version = "1.1.0"
license = "MIT"
description = "A lix plugin for diffing two generations"
homepage = "https://github.com/tgirlcloud/lix-diff"
authors = ["Isabel Roses <isabel@isabelroses.com>"]
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
color-eyre = "0.6.5"
humansize = "2.1.3"
nu-ansi-term = "0.50.1"
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
strip-ansi-escapes = "0.2.1"
terminal-light = "1.8.0"

[lints.clippy]
all = "warn"
pedantic = "warn"
unreadable_literal = { level = "allow", priority = 1 }

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
